# edgar

./: .editorconfig  .gitignore  .uvignore  LICENSE  README.md  SCRIPTS_CONSOLIDATION.md  company_facts_0002007191.csv  dev.py  justfile  main_api.py  pyproject.toml  pyrightconfig.json  scripts.toml
.github/: copilot-instructions.md
backup_20250627_195615/: main_web.py
backup_20250627_195615/src/edgar_query/agents/: markdown_responder.py
bkp/pad/: CIK0001930021.json  CIK0002007191.json  cik-extractor.py  cik123.json  edgar copy.py  edgar.py  runner.py
bkp/src/edgar_query/agents/: sql_generator.py
bkp/static/: app.htm
data/schema/: schema_index.sql  schema_table.sql
docs/: API_DOCS.md  schema.md
edgar/: __init__.py
edgar/agents/: __init__.py  data_loader.py  sql_executor.py  sql_generator.py
edgar/api/: __init__.py  server.py
edgar/cli/: __init__.py  main.py
edgar/core/: __init__.py  engine.py
edgar/services/: __init__.py  data_loader.py  markdown_responder.py  sql_executor.py  sql_generator.py
edgar/web/: __init__.py  server.py
scripts/: cleanup_old_structure.py  final_cleanup.py  lint_and_fix.bat  migrate_imports.py  run_api.py  run_web.py  start_services.bat
src/: __init__.py
src/edgar_query/: __init__.py
src/edgar_query/agents/: __init__.py  data_loader.py
src/edgar_query/api/: __init__.py  server.py
tests/: conftest.py  test_sql_executor.py
